force-app/main/default/objects/MDS_Settings__c/MDS_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>MDS Settings</description>
    <label>MDS Settings</label>
</CustomObject>