force-app/main/default/objects/MDS_Settings__c/fields/e1__c.field-meta.xml
<CustomField>
    <fullName>e1__c</fullName>
    <label>e1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>