force-app/main/default/objects/MDS_Settings__c/fields/mds_url__c.field-meta.xml
<CustomField>
    <fullName>mds_url__c</fullName>
    <description>mds url</description>
    <inlineHelpText>mds url</inlineHelpText>
    <label>mds_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>