force-app/main/default/objects/MDS_Settings__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <description>product</description>
    <inlineHelpText>product</inlineHelpText>
    <label>product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>