force-app/main/default/objects/MDS_Settings__c/fields/userid__c.field-meta.xml
<CustomField>
    <fullName>userid__c</fullName>
    <description>userid</description>
    <inlineHelpText>userid</inlineHelpText>
    <label>userid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>