force-app/main/default/objects/MDS_Settings__c/fields/ver__c.field-meta.xml
<CustomField>
    <fullName>ver__c</fullName>
    <description>version</description>
    <inlineHelpText>version</inlineHelpText>
    <label>ver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>